syntax = "proto3";

package org.tomasmo.plurpy.v1.account;

import "Account.proto";

service AccountsService {

  // Creates an account and returns a bearer token for the account
  //
  // Notes:
  // No verification of the account is done to make sure it's not a bot
  // The endpoint is not rate limited
  rpc Signup(SignupRequest) returns (SignupResponse) {}

  // Returns bearer token if account credentials are correct else 401 (Unauthorized) will be returned
  rpc Login(LoginRequest) returns (LoginResponse) {}
}

message SignupRequest {
  AccountInfo account_info = 1;
  string password = 2;
}

message SignupResponse {
  Account account = 1;
  string access_token = 2;
}

message LoginRequest {
  string name = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}